--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "axios": "^1.4.0",
+        "bootstrap": "^5.3.0",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.11.2",
         "react-scripts": "5.0.1",
